_overrideViewportWithArguments does not work when called before loading https://bugs.webkit.org/show_bug.cgi?id=197638 <rdar://problem/50505111>

Reviewed by Wenson Hsieh.

Source/WebCore:

* dom/Document.cpp:
(WebCore::Document::viewportArguments const):
(WebCore::Document::updateViewportArguments):
(WebCore::Document::setOverrideViewportArguments): Deleted.
* dom/Document.h:
(WebCore::Document::viewportArguments const): Deleted.
* page/Page.cpp:
(WebCore::Page::setOverrideViewportArguments):
* page/Page.h:
(WebCore::Page::overrideViewportArguments const):
* page/ViewportConfiguration.cpp:
(WebCore::ViewportConfiguration::setViewportArguments):
Move overrideViewportArguments to Page, since it is view-global in the API.

Source/WebKit:

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::setOverrideViewportArguments):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/OverrideViewportArguments.mm:
(TEST):


Canonical link: https://commits.webkit.org/211781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244998 268f45cc-cd09-0410-ab3c-d52691b4dbfc